deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-demo
  template:
    metadata:
      labels:
        app: k8s-demo
    spec:
      containers:
      - name: k8s-demo
        image: k8s-demo-app
        # This line is the fix: it stops K8s from looking at Docker Hub
        imagePullPolicy: Never 
        ports:
        - containerPort: 3000
